[package]
name = "rocks"
version = "0.1.0"
edition = "2021"
default-run = "rocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
configparser = "3.0.0"
log = "0.4"
env_logger = "0.8.4"
