[package]
name = "rocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
bench = false

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
configparser = "3.0.0"
log = "0.4"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
clap = { version = "3.0", features = ["derive"] }
chrono = { version = "0.4" }
